@@ -1,6 +1,7 @@
 V 0.91.48-wkd (2015-05-07 ff..)
 - Feature Parkposition in Mitte von Heatbeat für Wartungszwecke aktiviert
 - Anzeige Datum und Uhrzeit der letzten Compilierung beim Einschalten
+- Feature Autopause bei Druck < 200 (Filamentbruch) oder > 5000 (Duese verstopft) aktiviert. Doppelte Pause, damit Kopf von Druck wegfaehrt
 
 
 V 0.91.48 (2014-11-24)
